MongoDb connection made

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 PORT=5001
+MONGO_URI=mongodb+srv://ranjitkumar22129cse_db_user:SwzTpN7WavGHlo8p@clusterstreamify.iuxp9xa.mongodb.net/streamify_db?appName=ClusterStreamify
