--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stream-io/video-react-sdk": "^1.27.2",
     "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
     "lucide-react": "^0.554.0",
