--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router": "^7.9.6",
     "stream-chat": "^9.26.0",
     "stream-chat-react": "^13.13.0",
+    "streamify": "file:..",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
